--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = ""
 authors = [{ name = "Raphael Ramos", email = "raphael.opensource@gmail.com" }]
 readme = "README.md"
 requires-python = ">=3.9"
-dependencies = ["transformers[sentencepiece] (>=4.56.2,<5.0.0)", "ipykernel (>=6.30.1,<7.0.0)", "torch (>=2.8.0,<3.0.0)"]
+dependencies = ["transformers[sentencepiece] (>=4.56.2,<5.0.0)", "ipykernel (>=6.30.1,<7.0.0)", "torch (>=2.8.0,<3.0.0)", "pillow (>=11.3.0,<12.0.0)", "ffmpeg (>=1.4,<2.0)", "ffmpeg-python (>=0.2.0,<0.3.0)"]
 
 
 [build-system]
